# sharepoint-mcp

./: pyproject.toml
.github/workflows/: workflow.yml
scripts/: publish.py  run-public-mcp-server.sh  setup.sh
tools/: site_tools.py
