[project]
name = "sharepoint-mcp"
version = "0.0.2"
description = "SharePoint Model Context Protocol (MCP) server for LLM applications"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DEmodoriGatsuO", email = "your.email@example.com"}
]
keywords = ["mcp", "sharepoint", "llm", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=0.1.0",
    "msal>=1.20.0", 
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "python-dotenv>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.3.0", 
    "ruff>=0.0.169",
]

[project.scripts]
sharepoint-mcp = "server:main"

[project.urls]
Homepage = "https://github.com/MoMitwalyIgniteTech/sharepoint-mcp"
Repository = "https://github.com/MoMitwalyIgniteTech/sharepoint-mcp"
Issues = "https://github.com/MoMitwalyIgniteTech/sharepoint-mcp/issues"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["auth", "config", "tools", "utils", "resources"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
target-version = "py310"
line-length = 100
